Split Chat & Contents Area

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -28,7 +28,9 @@
   </div>
 
   <div class="contents-container">
-    contents here!
+    <div class="contents-ready">
+      <img src="assets/images/CI.jpg" />
+    </div>
   </div>
 
 </div>
