--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -9,20 +9,17 @@ mat-icon {
   z-index: 1;
 }
 
-.contents-container {
-  position: relative;
-  width: 70%;
-  height: 100%;
-  float: right;
+.mat-card {
+  padding: 0px;
 }
 
 .chat-container {
   position: absolute;
-  width: 30%;
-  min-width: 400px;
-  height: 100%;
+  width: 450px;
+  top: 64px;
+  bottom: 0px;
   float: left;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .chat-input {
@@ -32,12 +29,14 @@ mat-icon {
 
 .chat-list {
   overflow: auto;
-  position: relative;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  bottom: 100px;
 }
 
 .chat-list-item {
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin: 10px;
   border-radius: 5px;
   background-color: #E8EAF6;
 }
@@ -47,9 +46,28 @@ mat-icon {
 }
 
 .chat-footer-container {
-  position:relative;
+  position: absolute;
+  width: 100%;
+  bottom: 10px;
 }
 
 .chat-notification {
   text-align: center;
+}
+
+.contents-container {
+  position: absolute;
+  top: 64px;
+  bottom: 0px;
+  left: 450px;
+  right: 0px;
+  margin: 10px;
+}
+
+.contents-ready {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
 }
