--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <div>
     <mat-toolbar color="primary">
-      <span>현대오토에버 디지털 홍보관 채팅봇</span>
+      <span>채팅봇</span>
     </mat-toolbar>
 
     <div class="app-content">
